--- a/wp-content/plugins/mytheme-blocks/package.json
+++ b/wp-content/plugins/mytheme-blocks/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@wordpress/browserslist-config": "^2.3.0",
+    "@wordpress/components": "^8.2.0",
+    "@wordpress/editor": "^9.6.0",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "browserslist": "^4.5.4",
