--- a/wp-content/plugins/mytheme-blocks/package.json
+++ b/wp-content/plugins/mytheme-blocks/package.json
@@ -23,11 +23,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@wordpress/browserslist-config": "^2.3.0",
     "@wordpress/components": "^8.2.0",
     "@wordpress/editor": "^9.6.0",
+    "@wordpress/element": "^2.7.0",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "browserslist": "^4.5.4",
