--- a/wp-content/plugins/mytheme-blocks/package.json
+++ b/wp-content/plugins/mytheme-blocks/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.5",
     "browserslist": "^4.5.4",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.6.0",
