--- a/wp-content/plugins/mytheme-blocks/package.json
+++ b/wp-content/plugins/mytheme-blocks/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/alialaa/gutenberg-course-webpack#readme",
   "dependencies": {
     "@wordpress/blob": "^2.5.0",
+    "@wordpress/data": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
