--- a/wp-content/plugins/mytheme-blocks/package.json
+++ b/wp-content/plugins/mytheme-blocks/package.json
@@ -21,7 +21,8 @@
     "@wordpress/blob": "^2.5.0",
     "@wordpress/data": "^4.9.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-sortable-hoc": "^1.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
